--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,15 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  color: #f26b6b;
+  font-size: 1.2em;
+  margin-bottom: 5px;
+}
