made mobile responsive

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,10 +5,11 @@
   border-bottom: 5px solid #f23d3d;
   padding: 0 100px;
   height: 67px;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .header--score-cont {
+  display: none;
   margin-left: 32.5%;
   font-size: 1.3em;
 }
@@ -16,4 +17,10 @@
 .divider {
   margin: 0 3px;
   color: #f23d3d;
+}
+
+@media screen and (min-width: 870px) {
+  .header--score-cont {
+    display: inline;
+  }
 }
