--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,21 +1,26 @@
 .card--cont {
   display: flex;
   flex-direction: column;
-  width: 200px;
-  height: 250px;
+  width: 25%;
+  max-width: 150px;
   align-items: center;
   justify-content: center;
   color: #f23d3d;
   cursor: pointer;
   transition: 0.3s all;
+  margin-bottom: 10px;
 }
 
 .card--img {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
   border-radius: 4px;
   background-color: #1f1f20;
   margin-bottom: 5px;
+}
+
+.card--name {
+  font-size: 1em;
 }
 
 .card--cont:hover {
