--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -1,8 +1,13 @@
 .game--cont {
   width: fit-content;
-  height: 100%;
   display: flex;
-  align-self: center;
-  gap: 50px;
+  justify-content: center;
+  align-items: flex-start;
   margin-top: 40px;
+  flex-wrap: wrap;
+  width: 50%;
+  min-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  gap: 25px;
 }
